# gifjs

./: CMakeLists.txt  README.md  gif.c  gif.h  main.c  meta.h.in
